# OpenImageGen

./: .gitignore  LICENSE  README.md  config.toml  example.config.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  setup.py  setup_service.sh
openimagegen/: __init__.py  app.py  cli.py  config.py  jobs.py  main.py  schemas.py  service.py
openimagegen/models/: __init__.py  base.py  kandinsky.py  registry.py  stable_diffusion.py  stable_diffusion_xl.py
openimagegen/static/: webui.html
tests/: __init__.py  conftest.py  test_config.py  test_imports.py  test_jobs.py  test_registry.py  test_schemas.py
